project-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: phishing-ingress

spec:
  rules:
  - host: phishing.local

    http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend-service

            port:
              number: 80
